# GRIN

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: test.assets.ron
assets/dialogue/: intro.dialogue.ron
assets/gltf/: fist.glb  pipe.glb  rooftop.glb
assets/meshes/: boombox.glb  cubes.glb  fbody.glb  fbody_shatter.glb  hand.glb  head.glb  head_shatter.glb  headphones.glb  mbody.glb  mbody_shatter.glb  neapolitan.glb  pizza_shades.glb  skeleton.glb  sledge.glb  square_shades.glb
assets/shaders/: animated_material.wgsl  pbr_bindings.wgsl  pbr_functions.wgsl  pbr_types.wgsl  prepass.wgsl  sketch_material.wgsl  standard_material.wgsl  static.wgsl  vertex.wgsl
grin_derive/: Cargo.toml
grin_derive/src/: lib.rs
src/: asset.rs  collisions.rs  damage.rs  humanoid.rs  main.rs  map.rs  outlines.rs  physics.rs  sound.rs  texture_ops.rs  time.rs
src/ai/: Cargo.toml  boombox.rs  dummy.rs  dummy_2d.rs  mod.rs  movement.rs  screamer.rs
src/ai/bt/: mod.rs  tree.rs
src/ai/src/: boombox.rs  dummy.rs  lib.rs  movement.rs  screamer.rs  spawn.rs  spawns.rs
src/ai/src/bt/: mod.rs  tree.rs
src/asset/: Cargo.toml
src/asset/src/: lib.rs  texture.rs
src/character/: Cargo.toml  camera.rs  eightball.rs  mod.rs
src/character/kit/: eightball.rs  grin.rs  mod.rs
src/character/src/: lib.rs  util.rs
src/character/src/kit/: eightball.rs  grin.rs  mod.rs  smirk.rs
src/damage/: Cargo.toml  mod.rs  projectiles.rs
src/damage/src/: dot_region.rs  health.rs  hit.rs  hitbox.rs  impact.rs  lib.rs  plugin.rs  projectiles.rs  status.rs
src/derive/: Cargo.toml
src/derive/src/: lib.rs
src/dialogue/: Cargo.toml  asset_gen.rs  generation.rs  mod.rs
src/dialogue/src/: asset_gen.rs  lib.rs
src/input/: Cargo.toml
src/input/src/: camera.rs  lib.rs
src/item/: Cargo.toml  firing.rs  melee.rs  mod.rs  sledge.rs  smg.rs
src/item/src/: equip.rs  firing.rs  lib.rs  melee.rs  metal_pipe.rs  plugin.rs  sledge.rs  smg.rs  spawn.rs
src/item/src/mechanics/: animation.rs  combo.rs  firing.rs  fx.rs  hitbox.rs  mod.rs  util.rs
src/map/: Cargo.toml
src/map/src/: lib.rs
src/physics/: Cargo.toml
src/physics/src/: lib.rs
src/render/: Cargo.toml  blaze.rs  bwstatic.rs  duoquad.rs  gopro.rs  mod.rs  particles.rs  sketched.rs
src/render/src/: beam.rs  blaze.rs  bwstatic.rs  duoquad.rs  fill.rs  gopro.rs  lib.rs  particles.rs  sketched.rs  tint.rs
src/rig/: Cargo.toml
src/rig/src/: humanoid.rs  lib.rs
src/time/: Cargo.toml  mod.rs  scaling.rs
src/time/src/: lib.rs  scaling.rs
src/util/: Cargo.toml  color.rs  distr.rs  event.rs  mod.rs  query.rs  texture.rs  tween.rs  vectors.rs
src/util/src/: color.rs  event.rs  keys.rs  lib.rs  numbers.rs  query.rs  sound.rs  spatial.rs
src/weapon/: mod.rs  smg.rs
