[package]
name = "grin"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.16", features = ["3d", "progress_tracking"] }
bevy_common_assets = { version = "0.6", features = ["ron"] }
bevy_mod_outline = { git = "https://github.com/zainthemaynnn/bevy_mod_outline.git" }
bevy_rapier3d = "0.21"
bitflags = "2.1"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
iyes_progress = "0.8"
# bevy_shader_utils = "0.3.0"
bevy_mod_debugdump = "*"
thiserror = "1.0"
image = "0.24"
bevy_hanabi = "0.6"
serde = { version = "1.0", features = ["derive"] }
bitfield = "0.14"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
