[package]
name = "grin"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grin_ai = { path = "./src/ai" }
grin_asset = { path = "./src/asset" }
grin_character = { path = "./src/character" }
grin_damage = { path = "./src/damage" }
grin_derive = { path = "./src/derive" }
grin_dialogue = { path = "./src/dialogue" }
grin_item = { path = "./src/item" }
grin_input = { path = "./src/input" }
grin_physics = { path = "./src/physics" }
grin_map = { path = "./src/map" }
grin_render = { path = "./src/render" }
grin_rig = { path = "./src/rig" }
grin_time = { path = "./src/time" }
grin_util = { path = "./src/util" }
bevy = { version = "0.13", features = ["dynamic_linking", "wav"] }
bevy_mod_debugdump = "0.10"
bevy-inspector-egui = "0.24"
image = "0.24"
log = "0.4"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
