[package]
name = "grin_ai"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grin_asset = { path = "../asset" }
grin_character = { path = "../character" }
grin_derive = { path = "../derive" }
grin_damage = { path = "../damage" }
grin_map = { path = "../map" }
grin_physics = { path = "../physics" }
grin_render = { path = "../render" }
grin_rig = { path = "../rig" }
grin_time = { path = "../time" }
grin_util = { path = "../util" }
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.18", features = ["3d", "progress_tracking"] }
bevy_enum_filter = { git = "https://github.com/zainthemaynnn/bevy_enum_filter.git" }
bevy_hanabi = "0.8"
bevy_rapier3d = "0.23"
bevy_mod_inverse_kinematics = "0.5"
bevy_landmass = { git = "https://github.com/zainthemaynnn/bevy_landmass.git" }
landmass = "0.1"
rand = "0.8"
itertools = "0.10"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
