[package]
name = "grin_asset"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grin_render = { path = "../render" }
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.17", features = ["3d", "progress_tracking"] }
bevy_common_assets = { version = "0.7", features = ["ron"] }
iyes_progress = "0.9"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
