[package]
name = "grin_asset"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grin_render = { path = "../render" }
anyhow = "1"
bevy = { version = "0.12", features = ["dynamic_linking", "wav"] }
bevy_asset_loader = { version = "0.18", features = ["3d", "progress_tracking"] }
bevy_common_assets = { version = "0.8", features = ["ron"] }
iyes_progress = "0.10"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
