[package]
name = "grin_damage"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grin_asset = { path = "../asset" }
grin_physics = { path = "../physics" }
grin_render = { path = "../render" }
grin_util = { path = "../util" }
bevy = { version = "0.12", features = ["dynamic_linking", "wav"] }
bevy_asset_loader = { version = "0.18", features = ["3d", "progress_tracking"] }
bevy_rapier3d = "0.23"
bevy_tweening = "0.9"
rand = "0.8"
rand_distr = "0.4.3"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
