[package]
name = "grin_item"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grin_asset = { path = "../asset" }
grin_damage = { path = "../damage" }
grin_derive = { path = "../derive" }
grin_input = { path = "../input" }
grin_physics = { path = "../physics" }
grin_render = { path = "../render" }
grin_rig = { path = "../rig" }
grin_time = { path = "../time" }
grin_util = { path = "../util" }
bevy = { version = "0.12", features = ["dynamic_linking", "wav"] }
bevy_asset_loader = { version = "0.18", features = ["3d", "progress_tracking"] }
bevy_enum_filter = { git = "https://github.com/zainthemaynnn/bevy_enum_filter.git" }
bevy_rapier3d = "0.23"
rand = "0.8"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
