[package]
name = "grin_rig"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grin_asset = { path = "../asset" }
grin_damage = { path = "../damage" }
grin_physics = { path = "../physics" }
grin_render = { path = "../render" }
grin_time = { path = "../time" }
bevy = { version = "0.13", features = ["dynamic_linking", "wav"] }
bevy_asset_loader = { version = "0.20", features = ["3d", "progress_tracking"] }
bevy_rapier3d = "0.26"
rand = "0.8"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
