[package]
name = "grin_time"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grin_util = { path = "../util" }
bevy = { version = "0.12", features = ["dynamic_linking"] }
bevy_rapier3d = "0.23"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
