[package]
name = "grin_util"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking", "wav"] }
bevy_tweening = "0.10"
itertools = "0.10"
approx = "0.5"
rand = "0.8"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
